[package]
name = "horn"
version = "0.1.0"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
